[gd_scene load_steps=2 format=3 uid="uid://b2ggnmps1xi8f"]

[ext_resource type="Script" path="res://NPC/Follower.gd" id="1_0xyex"]

[node name="Follower" type="CharacterBody2D"]
script = ExtResource("1_0xyex")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="EnemyDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]

[node name="Pivot" type="Marker2D" parent="."]

[node name="AttackBox" type="Area2D" parent="Pivot" groups=["Melee"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/AttackBox"]

[node name="PlayerCollision" type="RayCast2D" parent="."]

[node name="MenuAnchor" type="Node2D" parent="."]

[connection signal="area_entered" from="EnemyDetector" to="." method="_on_enemy_detector_area_entered"]
[connection signal="area_exited" from="EnemyDetector" to="." method="_on_enemy_detector_area_exited"]
